// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`glam react basic 1`] = `
<p
  className="css-jk0pkr"
>
  hello world
</p>
`;

exports[`glam react basic render 1`] = `
<h1
  className=" css-13wdnau vars-nujrf4"
>
  hello world
</h1>
`;

exports[`glam react call expression 1`] = `
<h1
  className="legacy__class css-13wdnau vars-nujrf4"
>
  hello world
</h1>
`;

exports[`glam react composition 1`] = `
<h1
  className="legacy__class css-vxb7tq vars-3na0zv css-13wdnau vars-nujrf4"
>
  hello world
</h1>
`;

exports[`glam react function in expression 1`] = `
<h1
  className="legacy__class css-vxb7tq vars-prycnx css-13wdnau vars-nujrf4"
  scale={2}
>
  hello world
</h1>
`;

exports[`glam react higher order component 1`] = `
<div
  className=" css-o7j1h0 css-13wdnau vars-nujrf4"
>
  <div
    className="css-1l3rx1p"
  />
  <div
    className="css-1l3rx1p"
  />
  <div
    className="css-1l3rx1p"
  />
  <div
    className="css-1l3rx1p"
  />
</div>
`;

exports[`glam react kitchen sink 1`] = `
<div
  className="css__legacy-stuff css-1170hdn vars-k1238z frag-15qcrjv frag-mdk64u"
>
  <h1
    className="css-wjhr0q vars-11t1jtz frag-1wh34bm vars-telb2o"
  >
    BOOM
  </h1>
  <p
    className="test_class1 css-14jcta0"
  >
    Hello
  </p>
  <p
    className="test_class1 test___class45 css-1gdxe9e"
  >
    World
  </p>
  <p
    className="css-1g8ltio vars-bs2yjn"
  >
    hello world
  </p>
</div>
`;

exports[`glam react string expression 1`] = `
<p
  className="css-7sqgip"
>
  hello world
</p>
`;
